Fix for American-Government, suggested reading Issue #1847, Fix for College Physics overlap Issue #1752

--- a/css/refactor/american-government.less
+++ b/css/refactor/american-government.less
@@ -47,7 +47,7 @@
 @cnx-string-review-questions: "Review Questions";
 @cnx-string-critical-thinking-questions: "Critical Thinking Questions";
 @cnx-string-personal-application-questions: "Personal Application Questions";
-@cnx-string-suggested-reading: "Suggested Reading";
+@cnx-string-suggestions-for-further-study: "Suggestions for Further Study";
 
 
 // Utilizing this selector outside skeleton.  Keeping as little CSS in skeleton
